--- a/package.json
+++ b/package.json
@@ -9,12 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^3.9.0",
+    "@emotion/react": "^11.14.0",
+    "@hookform/resolvers": "^4.1.0",
+    "@tanstack/react-query": "^5.74.4",
+    "axios": "^1.7.9",
     "bcryptjs": "^3.0.2",
-    "jsonwebtoken": "^9.0.2",
+    "jose": "^6.0.8",
     "next": "15.1.7",
+    "next-themes": "^0.4.4",
     "pg": "^8.13.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
+    "react-icons": "^5.5.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
@@ -25,7 +33,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.1.7",
+    "eslint-config-next": "^15.2.0",
     "typescript": "^5"
   }
 }
