Integreted Firebase & Images uploader.

--- a/.env.local.example
+++ b/.env.local.example
@@ -4,3 +4,10 @@ DB_NAME=db_name
 DB_PASSWORD=password
 DB_PORT=1234
 JWT_SECRET=jwt-secret
+FIREBASE_API_KEY=string
+FIREBASE_AUTH_DOMAIN=string
+FIREBASE_PROJECT_ID=string
+FIREBASE_STORAGE_BUCKET=string
+FIREBASE_MESSAGING_SENDER_ID=string
+FIREBASE_APP_ID=string
+FIREBASE_MEASUREMENT_ID=string
