--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-query": "^5.74.4",
     "axios": "^1.7.9",
     "bcryptjs": "^3.0.2",
+    "firebase": "^11.7.1",
     "jose": "^6.0.8",
     "next": "^15.3.1",
     "next-themes": "^0.4.4",
@@ -25,6 +26,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
+    "uuid": "^11.1.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
