Improved header, auth forms styles, added footer.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "cSpell.words": ["Chakra", "uuidv"],
+  "cSpell.words": ["Andriy", "Chakra", "Shmalenko", "uuidv"],
   "editor.formatOnSave": true,
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": "always",
