--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-query": "^5.74.4",
     "axios": "^1.7.9",
     "bcryptjs": "^3.0.2",
+    "embla-carousel-react": "^8.6.0",
     "firebase": "^11.7.1",
     "jose": "^6.0.8",
     "next": "^15.3.1",
