--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "^15.3.1",
     "next-themes": "^0.4.4",
     "pg": "^8.13.3",
+    "qs": "^6.14.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
@@ -34,6 +35,7 @@
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/pg": "^8.11.11",
+    "@types/qs": "^6.9.18",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
