--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.14.0",
     "@hookform/resolvers": "^4.1.0",
     "@tanstack/react-query": "^5.74.4",
+    "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.7.9",
     "bcryptjs": "^3.0.2",
     "embla-carousel-react": "^8.6.0",
