--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.7.9",
     "bcryptjs": "^3.0.2",
+    "browser-image-compression": "^2.0.2",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.7.1",
     "jose": "^6.0.8",
